--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
         >
         <div class="hero__social-container">
           <figure class="hero__social-figure">
-            <a href="" class="hero__social-figure">
+            <a
+              href="https://www.linkedin.com/in/alenchufacundorios/"
+              class="hero__social-figure"
+              target="_blank"
+            >
               <img
                 class="hero__social-img"
                 src="./images/linkedin.png"
@@ -106,7 +110,11 @@
             </a>
           </figure>
           <figure class="hero__social-figure">
-            <a href="" class="hero__social-figure">
+            <a
+              href="https://github.com/alenchufacundo"
+              class="hero__social-figure"
+              target="_blank"
+            >
               <img
                 class="hero__social-img"
                 src="./images/skills/github.png"
@@ -115,7 +123,11 @@
             </a>
           </figure>
           <figure class="hero__social-figure ig-figure">
-            <a href="" class="hero__social-figure" in>
+            <a
+              href="https://www.instagram.com/alenchufacundorios"
+              class="hero__social-figure"
+              target="_blank"
+            >
               <img
                 class="hero__social-img"
                 src="./images/ig.png"
@@ -352,8 +364,9 @@
               </figure>
               <div class="details__links">
                 <a
+                  target="_blank"
                   class="details__link"
-                  href="https://64dd2f3487c9a708f63f2ba7--fascinating-clafoutis-597aa0.netlify.app/"
+                  href="https://www.deliciasenvasos.shop/"
                 >
                   Ver demo
                 </a>
@@ -406,6 +419,7 @@
               </figure>
               <div class="details__links">
                 <a
+                  target="_blank"
                   class="details__link"
                   href="https://shiny-mochi-4e88ca.netlify.app/
                   "
@@ -450,8 +464,9 @@
               </figure>
               <div class="details__links">
                 <a
+                  target="_blank"
                   class="details__link"
-                  href="https://github.com/alenchufacundo/preguntadosGame"
+                  href="https://www.bahifer.com/"
                 >
                   Ver demo
                 </a>
@@ -473,6 +488,7 @@
               <a
                 href="mailto: alenfacurios@gmail.com"
                 class="contact__email--link"
+                target="_blank"
               >
                 <img
                   src="images/sobre.png"
