--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
           </a>
         </figure>
 
-        <figure class="footer__picture">
+        <figure class="footer__figure">
           <a href="https://github.com/alenchufacundo" target="_blank">
             <img
               src="images/github.svg"
